--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.1",
+    "axios": "^1.7.9",
     "eslint-plugin-react": "^7.37.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
