Miglioramento tabella con Ui shadcn

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,14 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    // ui.shadcn.com
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
