--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/api": "^0.74.1",
+    "@nivo/line": "^0.88.0",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
