--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nivo/api": "^0.74.1",
+    "@nivo/bar": "^0.88.0",
     "@nivo/line": "^0.88.0",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
